fixing stickynav spacing

--- a/css/style.less
+++ b/css/style.less
@@ -120,6 +120,10 @@ article{
 
 /********** Navig **********/
 
+.sticky-wrapper{
+	height:5em;
+}
+
 .top-nav{
 	height:4.1em;
 	border-radius: 0;
@@ -183,7 +187,7 @@ article{
 
 .welcome{
 	height:90%;
-	margin-bottom:-5em;
+	margin-bottom:-5.3em;
 	z-index: -2;
 
 }
